:bug: Fix sui ausente

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Templates - News | Templates</title>
-    <link rel="stylesheet" href="../node_modules/futuremaster/dist/semantic.min.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="futuremaster.min.css" type="text/css" media="all" />
   </head>
   <body>
     <nav class="ui inverted futurecom blue main borderless menu">
