:bug: Corrige sui em subdiretórios

--- a/templates/confirmacao.html
+++ b/templates/confirmacao.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Templates - News | Confirmação</title>
-    <link rel="stylesheet" href="futuremaster.min.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="../futuremaster.min.css" type="text/css" media="all" />
   </head>
   <body>
     <nav class="ui inverted futurecom blue main borderless menu">
@@ -22,7 +22,6 @@
       <h1 class="ui header">Template de Confirmação</h1>
       <script async src="//jsfiddle.net/pixel3/kbon0j1q/embed/html,result/dark/"></script>
       <a href="index.html">
-        <i class="left arrow icon"></i>
         Voltar
       </a>
     </section>
