:lipstick: Atualiza UI

--- a/templates/confirmacao.html
+++ b/templates/confirmacao.html
@@ -7,12 +7,9 @@
     <link rel="stylesheet" href="../futuremaster.min.css" type="text/css" media="all" />
   </head>
   <body>
-    <nav class="ui inverted futurecom blue main borderless menu">
-      <div class="item">
-        ✉️ Templates
-      </div>
+    <nav class="ui inverted futurecom blue main borderless big menu">
       <a href="../index.html" class="header item">
-        Home
+        Instruções
       </a>
       <a href="index.html" class="header item">
         Templates
@@ -20,6 +17,11 @@
     </nav>
     <section class="ui text container segment">
       <h1 class="ui header">Template de Confirmação</h1>
+      <p>Descrição do Template ...</p>
+      <div class="ui info message">
+        Copie o conteúdo abaixo ou clique em <em><strong>Edit in JSFiddle</strong></em> para editar e testar online 
+        antes de copiar para aplicar na ferramenta de mail marketing.
+      </div>
       <script async src="//jsfiddle.net/pixel3/kbon0j1q/embed/html,result/dark/"></script>
       <a href="index.html">
         Voltar
