--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="../futuremaster.min.css" type="text/css" media="all" />
   </head>
   <body>
-    <nav class="ui inverted futurecom blue main borderless menu">
-      <div class="item">
-        ✉️ Templates
-      </div>
+    <nav class="ui inverted futurecom blue main borderless big menu">
       <a href="../index.html" class="header item">
         Instruções
       </a>
